--- a/components/cc_redPacket/cc_redPacket.wxss
+++ b/components/cc_redPacket/cc_redPacket.wxss
@@ -64,6 +64,10 @@
     color: #fbe0da;
     
 }
+.cancel {
+  background-color: #e9e9e9;
+  color:white;
+}
 .submit.cur {
   background-color: #f0695b;
   color: white;
