--- a/pages/get/get.wxml
+++ b/pages/get/get.wxml
@@ -7,8 +7,8 @@
 
   <view class='bless-box box'>
     <view class='main' style='background-image:url(http://dev.guotu.zsylife.cn/minidata/editBox.png)'>
-      <inlineAbstract cid='bless sender' imgw="80rpx" class='send-box' text="对对对" imgsrc='http://dev.guotu.zsylife.cn/minidata/index01.png'></inlineAbstract>
-      <inlineAbstract cid='bless geter' imgw="80rpx" class='rece-box' text="擦擦擦" imgsrc='http://dev.guotu.zsylife.cn/minidata/index01.png'></inlineAbstract>
+      <inlineAbstract  cid='bless sender' imgw="80rpx" class='send-box' text="对对对" imgsrc='http://dev.guotu.zsylife.cn/minidata/index01.png'></inlineAbstract>
+      <inlineAbstract wx:if='{{isLogin}}' cid='bless geter' imgw="80rpx" class='rece-box' text="{{userInfo.nickName}}" imgsrc='{{userInfo.avatarUrl}}'></inlineAbstract>
 
       <scroll-view class='bless' scroll-y> 这是一段祝福祝福这是一段祝福祝福这是一段祝福福祝福 这是一段祝福祝福这是一段祝福祝福这是一段祝福福祝福这是一段祝福祝福这是一段祝福祝福这是一段祝福福祝福这是一段祝福祝福这是一段祝福祝福这是一段祝福福祝福
       </scroll-view>
@@ -16,7 +16,7 @@
 
     </view>
 
-
+  
 
   </view>
   <view class='toggle-box {{ismoving? "move" : ""}}'>
@@ -24,26 +24,26 @@
       <view class='comment-box'>
         <view class='comment'>
           <view class='text'>
-            <text class='iconfont icon-fenxiang-tianchong'>填写留言：</text>
+            <text class='iconfont icon-pinglun'>填写留言：</text>
           </view>
-          <view class='textarea-box'>
+          <view class='textarea-box' hidden='{{ismoving}}'>
             <textarea type='text'></textarea>
           </view>
         </view>
         <view class='comment-options'>
-          <text class='option'><text class='iconfont icon-fenxiang-tianchong'></text>点赞</text>
-          <text class='option' bindtap='toggleComment'>查看留言<text class='iconfont icon-fenxiang-tianchong'></text></text>
+        <text class='option {{isLike?"liked":""}}' bindtap='toggleLike'><text class='iconfont icon-dianzan '  ></text>点赞</text>
+          <text class='option' bindtap='toggleComment'>查看留言<text class='iconfont icon-jiantou'></text></text>
         </view>
       </view>
 
       <view class='btn-box'>
-        <view class='btn'>我也要送祝福</view>
+        <view class='btn' bindtap='toPage'>我也要送祝福</view>
       </view>
 
       <view class='options-box'>
         <view class='item'>
-          <inlineAbstract class="fun" cid='editpage' mark='redPack' text='收红包' imgsrc="http://dev.guotu.zsylife.cn/minidata/index01.png" bind:callback="con"></inlineAbstract>
-          <inlineAbstract class="fun" cid='editpage' text='收卡券' imgsrc="http://dev.guotu.zsylife.cn/minidata/index01.png"></inlineAbstract>
+          <inlineAbstract class="fun" cid='editpage' mark='redPack' text='收红包' imgsrc="http://dev.guotu.zsylife.cn/minidata/red.png" bind:callback="con"></inlineAbstract>
+          <inlineAbstract class="fun" cid='editpage' text='收卡券' imgsrc="http://dev.guotu.zsylife.cn/minidata/cart.png"></inlineAbstract>
           <view class='clear'></view>
         </view>
       </view>
