--- a/pages/get/get.wxss
+++ b/pages/get/get.wxss
@@ -30,6 +30,7 @@
     text-align: center;
     justify-content: center;
     align-items: center;
+    text-shadow: 0 0 10px white;
 }
 
 .bless-box .rece-box {
@@ -71,6 +72,7 @@
 }
 .comment-box .comment-options .option {
   margin-right: 50rpx;
+   transition: all linear 0.2s;
 }
 .btn-box  {
   padding: 20rpx 0;
@@ -78,14 +80,8 @@
   overflow: hidden;
 }
 .btn-box .btn{
-   background-color: #f67f7f;
-   color: white;
-   display: inline-block;
-   height: 60rpx;
-   line-height: 60rpx;
-   text-align: center;
-   border-radius: 99rpx;
    margin-right: 50rpx;
+   text-shadow:0 0 10px white;
    font-size: 30rpx;
    float: right;
    width: 200rpx;
@@ -110,10 +106,24 @@
 .comment-list-box .comment-item:last-child {
   border-bottom-width: 0px;
 }
-
+.toggle-box {
+   transform-origin: top center;
+   padding-bottom: 50rpx;
+}
 .toggle-box.move {
    animation: rotate 3s ;
 }
+.option .icon-dianzan {
+  display: inline-block;
+  margin-right: 15rpx;
+ 
+  font-size: 35rpx;
+  transition: all  linear  200ms;
+}
+.option.liked {
+  color:#f67f7f;text-shadow: 0 0 10rpx palevioletred;
+}
+
 
 
  @keyframes rotate {
