--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,6 @@
 <view class="container">
     <tNotice text="选择祝福卡片分享给群和好友，对方打开后可收到祝福哦~" color="#f0695b" bgcolor="#fededf"></tNotice>
     <view class='contentBox'>
-      <view class='item' wx:key="indexItem" wx:for="{{listData}}"><imgBox src="{{item.src}}"></imgBox></view> 
-              
+      <view class='item' bindtap='toPage' data-id="{{item.id}}" wx:key="indexItem" wx:for="{{listData}}"><imgBox src="{{item.src}}"></imgBox></view> 
     </view>
 </view>
