--- a/pages/personal/personal.wxss
+++ b/pages/personal/personal.wxss
@@ -23,8 +23,8 @@
   font-size: 35rpx;
 }
 .info view {
-  height: 4vh;
-  line-height: 4vh;
+  height: 4.5vh;
+  line-height: 4.5vh;
 }
 .info .info-id {
   font-size: 25rpx;
@@ -46,7 +46,6 @@
   color: #4b4b4b;
 }
 .list .item .left {
-  color: #40bc4e;
   margin-right: 20rpx;
 }
 .list .item text {
@@ -56,8 +55,14 @@ display: inline-block;
   float: right;
   color:#c7c7c7;
 }
-
-.list .item:last-child {
-  border-bottom-width: 0px;
+.list .item .iconfont.left {
+  font-size: 40rpx;
+  color:#cb5a5a;
+}
+.list .item .iconfont.icon-icon-test1 {
+  color:#e75757;
+}
+.list .item .iconfont.icon-tixing,.list .item .iconfont.icon-qiaquan {
+  color: #40bc4e;
 }
    
