--- a/pages/get/get.wxss
+++ b/pages/get/get.wxss
@@ -9,7 +9,7 @@
 
 .bless-box {
   width: 100vw;
-  height: 55vw;
+  height: 45vw;
   position: relative;
   padding:  20rpx 0 ;
   background-color: white;
@@ -42,12 +42,12 @@
 .comment-box {
   padding: 30rpx 30rpx 15rpx;
   background-color: white;
-  height: 370rpx;
+  height: 250rpx;
 }
 .comment-box .comment {
   background-color: #fbf3e4;
   border: 2px solid #e9e9e9;
-  height: 300rpx;
+  height: 190rpx;
   border-radius: 10rpx;
   padding: 0 20rpx;
 }
@@ -58,11 +58,12 @@
 }
 .comment-box .comment .textarea-box {
   width: 100%;
-  height: 215rpx;
+  height: 100rpx;
 }
 .comment-box .comment .textarea-box textarea {
   width: 100%;
   height: 100%;
+  font-size: 33rpx
 }
 .comment-box .comment-options {
   height: 50rpx;
@@ -96,7 +97,7 @@
 .options-box .item .clear {
   clear: both;
 }
-.comment-list-box .comment-title {
+.comment-list-box .comment-title,.comment-list-box .comment-back {
   color: #8b8b8b;
   padding: 20rpx;
 }
@@ -110,23 +111,12 @@
    transform-origin: top center;
    padding-bottom: 50rpx;
 }
-.toggle-box.move {
-   animation: rotate 3s ;
-}
-.option .icon-dianzan {
-  display: inline-block;
-  margin-right: 15rpx;
- 
-  font-size: 35rpx;
-  transition: all  linear  200ms;
-}
-.option.liked {
-  color:#f67f7f;text-shadow: 0 0 10rpx palevioletred;
+.toggle-box.moves {
+   animation: rotate1 3s ;
 }
 
 
-
- @keyframes rotate {
+ @keyframes rotate1 {
   0% {
         transform: rotateY(0deg) scale(1,1);
           opacity: 1;
@@ -140,3 +130,18 @@
       opacity: 1;
   }
 } 
+
+
+.option .icon-dianzan {
+  display: inline-block;
+  margin-right: 15rpx;
+  font-size: 35rpx;
+  transition: all  linear  200ms;
+}
+.option.liked {
+  color:#f67f7f;text-shadow: 0 0 10rpx palevioletred;
+}
+.option.submit-comment {
+  float:right;
+  color:#f67f7f;
+}
