--- a/components/cc_slideA/cc_slideA.wxml
+++ b/components/cc_slideA/cc_slideA.wxml
@@ -1,8 +1,8 @@
 <view class='container' >
-     <scroll-view scroll-x scroll-into-view="{{sid}}" scroll-with-animation='true'>
+     <scroll-view scroll-x scroll-into-view="{{sid}}" scroll-with-animation='true' bindtouchstart='touchstart'>
     <view class='list-box' style="width:{{width}}" >
        <block wx:for="{{imgurl}}" wx:key="slider">
-           <view class='img-box' data-index='{{index}}' bindtouchstart='touchstart' bindtap='tap'><imgBox src="{{item}}" ></imgBox></view>
+           <view class='img-box' data-index='{{index}}'  bindtap='tap'><imgBox src="{{item}}" ></imgBox></view>
        </block>
 
        <block wx:for="{{imgurl}}" wx:key="slider-pos">
