--- a/pages/save/save.wxml
+++ b/pages/save/save.wxml
@@ -1,6 +1,6 @@
 <view class='container gray-content'>
   <view class='slide-box box'>
-    <slide imgurl='{{imgUrls}}'></slide>
+    <slide id='slide' imgurl='{{imgUrls}}'></slide>
   </view>
 
   <view class='bless-box box'>
