--- a/components/cc_tbNotice/cc_tbNotice.wxss
+++ b/components/cc_tbNotice/cc_tbNotice.wxss
@@ -5,18 +5,28 @@
   top:0;
 }
 .content{
-  width: 94vw;
+  width: 100vw;
   position: fixed;
   height: 7vh;
   line-height: 7vh;
-  padding: 0 3vw;
   z-index: 2;
   font-size: 28rpx;
   text-align: center;
   border-bottom:1px solid #e0e0e0;
 }
 .content .main {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+ display: inline-block;
+ width:auto;
+ word-break:keep-all;
+ white-space:nowrap;
+ height: 100%;
+ overflow: hidden;
+}
+.content .main-box {
+  position: relative;
+}
+scroll-view {
+  position: relative;
+  width: 94%;
+  margin: 0 3%;
 }
