--- a/components/cc_fullTabsList/cc_fullTabsList.wxml
+++ b/components/cc_fullTabsList/cc_fullTabsList.wxml
@@ -5,7 +5,7 @@
 <view class='list-container {{isShow? "show":""}}'>
   <view class='top'>
     <text bindtap='close'> 关闭 </text>
-    <scroll-view class='tabs' scroll-x>
+    <scroll-view wx:if='{{tabShow}}' class='tabs' scroll-x>
       <view bindtap='tabClick' class='tabs-item {{item.id == nowList.id ? "hover":""}}' wx:for='{{tabData}}' wx:key='listTab' data-id='{{item.id}}'>{{item.text}}</view>
     </scroll-view>
   </view>
